--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^20.11.9",
     "axios": "^1.6.4",
     "react": "^18.2.0",
+    "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.2",
     "recoil": "^0.7.7",
