[fix] yml 수정및 배포용 build 폴더 추가

--- a/.github/workflows/dev__deploy.yml
+++ b/.github/workflows/dev__deploy.yml
@@ -56,7 +56,7 @@ jobs:
       
       # 생성한 deploy.zip 파일 내부 확인용!
       - name: Get Zip Inside
-        run: zipinfo -1 dist/deploy.zip
+        run: zipinfo -1 build/deploy.zip
 
       # 현재 시간 얻기 (Build 시점의 시간 얻기)
       - name: Get current time
@@ -82,7 +82,7 @@ jobs:
           version_label: github-action-${{ steps.current-time.outputs.formattedTime }}  # version_label은 이전에 배포한 label과 중복되면 안됨!
           use_existing_version_if_available: true
           region: ap-northeast-2
-          deployment_package: dist/deploy.zip
+          deployment_package: build/deploy.zip
           wait_for_deployment: false  # 바로 Beanstalk으로 넘어갈 수 있도록 함
 
       # 그냥 다 했다고 출력하기
