--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-modal": "^3.16.3",
     "axios": "^1.6.4",
     "react": "^18.2.0",
+    "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.21.2",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.48",
+    "@types/react-datepicker": "^6.0.0",
     "@types/react-dom": "^18.2.18",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.34",
