--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/jest": "^29.5.11",
     "@types/node": "^20.11.17",
     "@types/react-modal": "^3.16.3",
+    "@types/youtube": "^0.0.50",
     "axios": "^1.6.4",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
